refactoring dir
